discussion/kv_engine/181794/181794_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add WeakPtrBag

An unordered collection which is semantically a thread-safe vector of
weak_ptrs.

The motivation for this is to have a method like 'getAllExistingTasks',
such that we can orchestrate the execution of tasks relevant to unified
caching across all buckets without making the core aware of the
individual tasks' existence.

Change-Id: Id91a8153611909c300c2daeafea1fd8bcee6dec4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-10-25 16:27:44.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-25 16:47:12.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50656/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50656/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11165/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11165/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11165/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23466/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23466/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24706/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24706/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23873/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23873/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22887/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22887/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31890/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31890/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21436/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:23:15: error: expected parameter declarator [clang-diagnostic-error]
    void push(std::shared_ptr<T> ptr) {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:23:15: error: use of undeclared identifier "std" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:23:34: error: expected ")" [clang-diagnostic-error]
    void push(std::shared_ptr<T> ptr) {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:23:14: note: to match this "("
    void push(std::shared_ptr<T> ptr) {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:24:31: error: use of undeclared identifier "std" [clang-diagnostic-error]
        items.withLock([ptr = std::move(ptr)](auto& locked) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:24:41: error: use of undeclared identifier "ptr" [clang-diagnostic-error]
        items.withLock([ptr = std::move(ptr)](auto& locked) {
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:26:30: error: use of undeclared identifier "ptr" [clang-diagnostic-error]
            locked.push_back(ptr);
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:33:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::vector<std::shared_ptr<T>> getItems() const {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:33:17: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::vector<std::shared_ptr<T>> getItems() const {
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:46:12: error: use of undeclared identifier "std" [clang-diagnostic-error]
    static std::vector<std::shared_ptr<T>> compact(
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:46:24: error: use of undeclared identifier "std" [clang-diagnostic-error]
    static std::vector<std::shared_ptr<T>> compact(
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:47:13: error: use of undeclared identifier "std" [clang-diagnostic-error]
            std::vector<std::weak_ptr<T>>& ptrs) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:47:25: error: use of undeclared identifier "std" [clang-diagnostic-error]
            std::vector<std::weak_ptr<T>>& ptrs) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:48:9: error: use of undeclared identifier "std" [clang-diagnostic-error]
        std::vector<std::shared_ptr<T>> alive;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:48:21: error: use of undeclared identifier "std" [clang-diagnostic-error]
        std::vector<std::shared_ptr<T>> alive;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:67:13: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:67:33: error: use of undeclared identifier "std" [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:67:45: error: use of undeclared identifier "std" [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:67:62: error: expected a type [clang-diagnostic-error]
    mutable folly::Synchronized<std::vector<std::weak_ptr<T>>, std::mutex>
                                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21436/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/weak_ptr_bag.h:23:15:
error: expected parameter declarator [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21436/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/164/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/164/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11256/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11256/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20703/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42504/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
